<resources>
    <string name="app_name">Seller</string>
    <string name="adurcup_seller">Adurcup Seller</string>
    <string name="password">Password</string>
    <string name="key_password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="empty_necessary_field">This is necessary field!</string>
    <string name="allowed_digit_waring">Only digit and \'+91\' at starting position is allowed</string>
    <string name="incomplete_mobile_number">Incomplete mobile number</string>
    <string name="check_mobile_number">Check your mobile number</string>
    <string name="minimum_character">Password must be greater than 6 characters</string>
    <string name="warning_check_email_password">Enter your mobile number and password correctly</string>
    <string name="key_username">username</string>
    <string name="key_usertype">userType</string>
    <string name="key_vendor">vendor</string>
    <string name="new_user_sign_up_here">New User? Sign Up here</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="invalid_username_or_password">Invalid mobile number or password</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="server_error">Server Error</string>
    <string name="welcome">"Welcome!"</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to login</string>
    <string name="same_confirm_password">This field should be same as above password field</string>
    <string name="forbidden_registration">Server Forbidden Registration</string>
    <string name="key_name">name</string>
    <string name="key_phone">phone</string>
    <string name="key_message">message</string>
    <string name="key_idhash">idHash</string>
    <string name="business_name">Business Name</string>
    <string name="warning_confirm_password">Password and confirm password fields do not match</string>
    <string name="enter_required_fields_correctly">Enter required fields correctly!</string>
    <string name="submit">Submit</string>
    <string name="not_received_otp_yet_resend_otp">Not received OTP yet, resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="parse_error">Parse error</string>
    <string name="enter_otp_field_here">Enter OTP field here!</string>
    <string name="otp_linting_error">OTP should be six digit number!</string>
    <string name="key_otp">otp</string>
    <string name="key_temp_user_id_hash">tempuserIdHash</string>
    <string name="otp_cannt_exceed_limit_length">OTP can\'nt be more than 6 digit number</string>
    <string name="_0">0</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New Password</string>
    <string name="key_new_password">newPassword</string>
    <string name="key_verify_password">verifyPassword</string>
    <string name="welcome_to_adurcup">Welcome to Adurcup!</string>
    <string name="string_slide_one">Adurcup helps restaurants to fulfill their backend needs through its procurement and service platform.</string>
    <string name="list_your_product_online">List your product online</string>
    <string name="slide_two_string">Add your products or services to our online database and showcase them to a crowd of more than 1000 restaurants in Delhi NCR.</string>
    <string name="easy_logistics">Easy logistics</string>
    <string name="string_slide_3">You can focus on your core business and stop worrying about the logistic as we handle all of that for you.</string>
    <string name="get_started">Get started</string>
    <string name="string_slide_four">Join Adurcup and get standardised services with analytics of all your orders through our platform</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="order">Order</string>
    <string name="payments">Payments</string>
    <string name="help_amp_support"><![CDATA[Help & support]]></string>
    <string name="report">Report</string>
    <string name="contact_us">Contact Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="business_profile">Business Profile</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="done">Done</string>
    <string name="service">Service</string>
    <string name="company">Company</string>
    <string name="contact">Contact</string>
    <string name="payment">Payment</string>
    <string name="select_your_services">Select your services</string>
    <string name="pest_control">Pest Control</string>
    <string name="packaging_materials">disposables</string>
    <string name="wifi">Wifi</string>
    <string name="breads">Breads</string>
    <string name="payment_solutions">Payment Solutions</string>
    <string name="housekeeping">Housekeeping</string>
    <string name="warning_choose_service">Choose a service first!</string>
    <string name="fill_required_field">Fill required field first</string>
    <string name="choose_service">Choose a service at least!</string>
    <string name="pin_code">Pin Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="primary_mobile_number">Primary Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="pan_number">PAN Number</string>
    <string name="vat_number">VAT Number</string>
    <string name="services_tax_registered_number">Services Tax Registered Number</string>
    <string name="concerned_person">Concerned Person</string>
    <string name="address">Address</string>
    <string name="company_registered_name">Company Registered Name</string>
    <string name="legal_status">Legal Status</string>
    <string name="nationality">Nationality</string>
    <string name="age">Age</string>
    <string name="identifier2">The identifier2(Compartment): 2</string>
    <string name="identifier1">The identifier1(Volume): 500ml</string>
    <string name="category">CUP</string>
    <string name="company_name">Maa Pet Private Limited</string>
    <string name="product_name">Some Food Packaging Product</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="account_number">Account number</string>
    <string name="bank_address">Bank address</string>
    <string name="check_in_favour">Cheque in favour</string>
    <string name="mirc_code">MICR code</string>
    <string name="ifsc_code">IFSC/SEFT code</string>
    <string name="bank_shorting_code">Banks shorting code</string>
    <string name="authorised_signatory_name">Authorised signatory name</string>
    <string name="designation">Designation</string>
    <string name="choose_filter">Choose a category to filter</string>
    <string name="stock">Stock:</string>
    <string name="orders_title">ORDERS</string>
    <string name="todays_pickup">2</string>
    <string name="total_pickups">4</string>
    <string name="products_listing">PRODUCTS LISTING</string>
    <string name="in_stock">2</string>
    <string name="out_of_stock">2</string>
    <string name="in_active">4</string>
    <string name="in_settlement">2</string>
    <string name="settled">4</string>
    <string name="in_stock_title">IN STOCK</string>
    <string name="out_of_stock_title">OUT OF STOCK</string>
    <string name="inactive_title">INACTIVE</string>
    <string name="total_payment_this_month">TOTAL PAYMENT THIS MONTH</string>
    <string name="in_settlement_title">IN SETTLEMENT</string>
    <string name="settled_title">SETTLED</string>
    <string name="services_tax_regs_code">Service Tax Registration Code</string>
    <string name="secondary_mobile_number">Secondary Mobile Number</string>
    <string name="pickup_address_title">Pickup Address</string>
    <string name="pin_code_title">PIN Code</string>
    <string name="concerned_person_title">Concerned Person</string>
    <string name="primary_mobile_number_title">Primary Mobile Number</string>
    <string name="secondary_mobile_number_title">Secondary Mobile Number</string>
    <string name="weight_of_package">Package Weight (kgs)</string>
    <string name="number_of_products_title">No. of Products (units)</string>
    <string name="schedule_pickup_title">Schedule Pickup</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="pickup_id_title">Pickup ID:</string>
    <string name="pickup_id">123456</string>
    <string name="items_title">Items:</string>
    <string name="items">24 units (2kgs)</string>
    <string name="pick_up_address_title">Pickup Address:</string>
    <string name="pick_up_address">This is the address, Location</string>
    <string name="status_title">Status:</string>
    <string name="status">Photography in progress</string>
    <string name="title_label">Title</string>
    <string name="title">Product Title</string>
    <string name="category_label">Category</string>
    <string name="category_deatils">Category</string>
    <string name="volume_label">Volume</string>
    <string name="volume">500ml</string>
    <string name="top_diameter">Top Diameter</string>
    <string name="top_diameter_value">20 inch</string>
    <string name="material_label">Material</string>
    <string name="material_value">Plastic</string>
    <string name="color_label">Color</string>
    <string name="color_value">Transparent</string>
    <string name="shape_label">Shape</string>
    <string name="shape_value">Shape(Overview)</string>
    <string name="weight_label">Weight</string>
    <string name="weight_value">124gm</string>
    <string name="business_details_label">Business Details</string>
    <string name="choose_language_label">Choose Language</string>
    <string name="change_password_label">Change Password</string>
    <string name="feedback_label">Feedback</string>
    <string name="copany_name_title">Company Name</string>
    <string name="mobile_number_title">8800434677</string>
    <string name="logout_button_label">Log Out</string>
    <string name="edit_details">Edit Details</string>
    <string name="url">http://35.154.29.191:3000/</string>
    <string name="url_signin">api/auth/signin</string>
    <string name="url_register">api/tempusers</string>
    <string name="url_otp_confirmation">api/tempusers/</string>
    <string name="url_registration_auth">api/auth/signup</string>
    <string name="url_list_current_product">api/vendor/newdisposables</string>
    <string name="url_vendor_business">api/vendor/business</string>
    <string name="url_change_password">api/auth/forgot</string>
    <string name="url_reset_password">api/auth/reset/</string>
    <string name="url_image_500_from_AWS">https://s3.ap-south-1.amazonaws.com/adurcup-new-images-disposables/500/</string>
    <string name="url_profile_me">api/users/me</string>
    <string name="url_image_75_from_AWS">https://s3.ap-south-1.amazonaws.com/adurcup-new-images-disposables/300/</string>
    <string name="url_vendor_overview">api/vendoroverview</string>
    <string name="url_pickups">api/pickups</string>
    <string name="url_isapp">"\?isapp=true"</string>
    <string name="url_orders">api/vendor/orders</string>
    <string-array name="legal_status">
        <item>individual</item>
        <item>partnership</item>
        <item>private</item>
        <item>govt</item>
        <item>semi-private</item>
    </string-array>
    <string-array name="gender">
        <item>male</item>
        <item>female</item>
        <item>other</item>
    </string-array>
    <string-array name="assertion">
        <item>No</item>
        <item>Yes</item>
    </string-array>
</resources>
