<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="24dp"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/select_your_services"
        />
    <CheckBox
        android:id="@+id/pest_check"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/pest_control"
        android:enabled="false"
        />
    <CheckBox
        android:id="@+id/packaging_check"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/packaging_materials"
        />
    <CheckBox
        android:id="@+id/wifi_check"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/wifi"
        android:enabled="false"
        />
    <CheckBox
        android:id="@+id/breads_check"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/breads"
        android:enabled="false"
        />
    <CheckBox
        android:id="@+id/payment_check"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/payment_solutions"
        android:enabled="false"
        />
    <CheckBox
        android:id="@+id/house_check"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/housekeeping"
        android:enabled="false"
        />
</LinearLayout>
