<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"
            android:text="@string/legal_status"
            />
        <Spinner
            android:id="@+id/legal_status"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="8dp"
            android:entries="@array/legal_status"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/companyNameInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textPersonName"
                style="@style/EditText"
                android:hint="@string/company_registered_name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/addressInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textPostalAddress"
                style="@style/EditText"
                android:hint="@string/address"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/pinCodeInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="number"
                style="@style/EditText"
                android:hint="@string/pin_code"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/cityInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textAutoComplete"
                style="@style/EditText"
                android:hint="@string/city"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/stateInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textAutoComplete"
                style="@style/EditText"
                android:hint="@string/state"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/primaryNumberInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="phone"
                android:maxLength="10"
                style="@style/EditText"
                android:hint="@string/primary_mobile_number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/secondaryNumberInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="phone"
                android:maxLength="10"
                style="@style/EditText"
                android:hint="@string/secondary_mobile_number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textEmailAddress"
                style="@style/EditText"
                android:hint="@string/email_address"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/panNumberInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="text"
                style="@style/EditText"
                android:hint="@string/pan_number"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/vatNumberInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="text"
                style="@style/EditText"
                android:hint="@string/vat_number"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/serviceTaxInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="text"
                style="@style/EditText"
                android:hint="@string/services_tax_registered_number"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/serviceTaxCodeInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="text"
                style="@style/EditText"
                android:hint="@string/services_tax_regs_code"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>
