<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/bankNameInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="text"
                style="@style/EditText"
                android:hint="Name of bank"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/accountNumberInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="number"
                style="@style/EditText"
                android:hint="@string/account_number"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/bankAddressInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textPostalAddress"
                style="@style/EditText"
                android:hint="@string/bank_address"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/pinCodeInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="number"
                style="@style/EditText"
                android:hint="@string/pin_code"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/cityInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textAutoComplete"
                style="@style/EditText"
                android:hint="@string/city"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/stateInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textAutoComplete"
                style="@style/EditText"
                android:hint="@string/state"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/chequeInFavourInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="text"
                style="@style/EditText"
                android:hint="@string/check_in_favour"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/micrInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textPostalAddress"
                style="@style/EditText"
                android:hint="@string/mirc_code"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ifscInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textPostalAddress"
                style="@style/EditText"
                android:hint="@string/ifsc_code"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/bankShortingCodeInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textPostalAddress"
                style="@style/EditText"
                android:hint="@string/bank_shorting_code"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/authorisedSignatoryInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textPersonName"
                style="@style/EditText"
                android:hint="@string/authorised_signatory_name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/designationInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="text"
                style="@style/EditText"
                android:hint="@string/designation"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>
