<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.OtpActivity"
    android:gravity="center_horizontal"
    android:id="@+id/llBase"
    android:orientation="vertical">

    <TextView
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/_0"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        android:gravity="center"
        android:id="@+id/count_down"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/otpInput"
        app:errorTextAppearance="@style/error_appearance"
        style="@style/TextInputLayout">
        <EditText
            android:inputType="phone"
            style="@style/EditText"
            android:hint="@string/enter_otp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/Button"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:onClick="submit"
        />

    <ProgressBar
        style="@style/ProgressBar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/not_received_otp_yet_resend_otp"
        android:visibility="invisible"
        android:id="@+id/resendOTP"
        android:onClick="resendOTP"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/back_to_login"
        android:onClick="backLogin"
        android:id="@+id/textView" />
</LinearLayout>