<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity"
    android:gravity="center_horizontal"
    android:id="@+id/llBase"
    android:orientation="vertical">

    <ImageView
        style="@style/TopLogo"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/primaryNumberInput"
        app:errorTextAppearance="@style/error_appearance"
        style="@style/TextInputLayout">
        <EditText
            android:inputType="phone"
            android:maxLength="10"
            style="@style/EditText"
            android:hint="@string/mobile_number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInput"
        app:errorTextAppearance="@style/error_appearance"
        style="@style/TextInputLayout">
        <EditText
            android:inputType="textPassword"
            style="@style/EditText"
            android:hint="@string/password"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/Button"
        android:text="@string/login"
        android:id="@+id/login"
        android:onClick="login"
    />

    <ProgressBar
        style="@style/ProgressBar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/forgot_password"
        android:onClick="forgotPassword"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/new_user_sign_up_here"
        android:onClick="signUp"
        />
</LinearLayout>
