<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.RegistrationActivity"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/llBase"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/black_logo"
            tools:ignore="ContentDescription" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textPersonName"
                style="@style/EditText"
                android:hint="@string/business_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/primaryNumberInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="phone"
                style="@style/EditText"
                android:tag="+91"
                android:maxLength="10"
                android:hint="@string/mobile_number"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textPassword"
                style="@style/EditText"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordInput"
            app:errorTextAppearance="@style/error_appearance"
            style="@style/TextInputLayout">
            <EditText
                android:inputType="textPassword"
                style="@style/EditText"
                android:hint="@string/confirm_password"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            style="@style/Button"
            android:text="@string/register"
            android:id="@+id/register"
            android:onClick="register"
            />

        <ProgressBar
            style="@style/ProgressBar"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="0.5"
            android:padding="20dp"
            android:text="@string/back_to_login"
            android:onClick="backLogin"
            />
    </LinearLayout>
</ScrollView>
